# pipehub

./: .dockerignore  Dockerfile  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  nightly.yml  pr.yml  release.yml
server/: .env.example  .gitignore  Cargo.toml  Procfile
server/migrations/: 20220215080801_init.sql  20220303081032_microsoft.sql
server/migrations/2020-05-30-172150_tenant/: down.sql  up.sql
server/migrations/2020-06-07-132840_block_list/: down.sql  up.sql
server/migrations/2020-06-12-125632_add_unique_key/: down.sql  up.sql
server/migrations/2022-02-11-154518_add_telegram/: down.sql  up.sql
server/migrations/2022-02-15-055855_captcha/: down.sql  up.sql
server/src/: captcha.rs  config.rs  data.rs  error.rs  github.rs  logger.rs  main.rs  microsoft.rs  models.rs  request_id.rs  schema.rs  send.rs  user.rs  util.rs  wechat.rs
server/static/.well-known/: microsoft-identity-association.json
tests/: .gitignore  Cargo.toml
tests/src/: main.rs
usecases/: Notify Me.flo
web/: package.json
web/public/: index.html
web/src/: App.tsx  Constants.ts  Faq.tsx  GetStarted.tsx  Home.tsx  Navs.tsx  Routes.tsx  Send.tsx  User.tsx  index.css  index.tsx
