[package]
name = "server"
version = "0.3.0"
authors = ["Zhiyuan Zheng <zhzy0077@hotmail.com>"]
edition = "2018"
repository = "https://github.com/zhzy0077/PipeHub"

[dependencies]
actix-cors = "0.5"
actix-http = "2.2"
actix-rt = "1.1"
actix-session = "0.4"
actix-web = "3.3"
base58 = "0.2"
config = "0.10"
dashmap = "5.1"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4"
dotenv = "0.15"
futures-util = "0.3"
lazy_static = "1.4"
log = { version="0.4", features = ["serde", "std"], default-features = false }
num_cpus = "1.13"
rand = "0.7"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.8"
sqlx = { version = "0.4", features = [ "runtime-tokio-native-tls", "macros", "postgres" ], default-features = false }
tokio = { version = "1.16", features = ["full"] }
url = "2.1"
