[package]
name = "server"
version = "0.3.0"
authors = ["Zhiyuan Zheng <zhzy0077@hotmail.com>"]
edition = "2021"
repository = "https://github.com/zhzy0077/PipeHub"

[dependencies]
actix-cors = "0.5"
actix-files = "0.5"
actix-http = { version = "2.2", features = [ "rustls" ], default-features = false }
actix-rt = "1.1"
actix-session = "0.4"
actix-web = { version = "4.0", features = [ "rustls" ], default-features = false }
base58 = "0.2"
config = "0.10"
dashmap = "5.1"
dotenv = "0.15"
futures-util = "0.3"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.9"
num_cpus = "1.13"
rand = "0.7"
reqwest = { version = "0.10", features = ["json", "rustls-tls"], default-features = false }
regex = { version = "1.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.4", features = ["runtime-tokio-rustls", "macros", "migrate", "postgres"], default-features = false }
tokio = { version = "0.2" }
url = "2.1"
uuid = { version = "0.8", features = ["v4"] }
