[package]
name = "server"
version = "0.3.0"
authors = ["Zhiyuan Zheng <zhzy0077@hotmail.com>"]
edition = "2021"
repository = "https://github.com/zhzy0077/PipeHub"

[dependencies]
actix-cors = "0.6"
actix-files = "0.6"
actix-http = { version = "3.2", default-features = false }
actix-session = "0.5"
actix-web = { version = "^4.0", features = [ "macros" ], default-features = false }
base58 = "0.2"
config = "0.10"
dashmap = "5.1"
dotenv = "0.15"
futures-util = "0.3"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.9"
num_cpus = "1.13"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
regex = { version = "1.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "macros", "migrate", "postgres"], default-features = false }
url = "2.1"
uuid = { version = "0.8", features = ["v4"] }
